# chukei-dns

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  config.example.json  zones-schema.jsonc  zones.json
.github/workflows/: sanity-test.yml
cmake/: GenerateCacertBundle.cmake
include/: cmake_vars.h.in  config.h  config_parser.h  constants.h  default_json.h.in  dns_cache.h  dns_edns0.h  dns_over_https.h  dns_packet.h  dns_packet_answer.h  dns_packet_header.h  dns_packet_question.h  dns_parser.h  dns_response.h  local_dns.h  tcp_server.h  udp_server.h  utils.h
include/orbis/: libkernel.h
src/: CMakeLists.txt  config.cc  config_parser.cc  dns_cache.cc  dns_over_https.cc  dns_packet.cc  dns_packet_answer.cc  dns_packet_header.cc  dns_packet_question.cc  dns_parser.cc  dns_response.cc  local_dns.cc  main-pc.cc  main-ps.cc  tcp_server.cc  udp_server.cc  utils.cc
tests/: CMakeLists.txt  integration_test.py  test_config.cc  test_config_parser.cc  test_dns_cache.cc  test_dns_over_https.cc  test_dns_packet.cc  test_dns_parser.cc  test_dns_response.cc  test_framework.h  test_local_dns.cc  test_main.cc  test_utils.cc
